[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tokenwise"
version = "0.1.0"
authors = [
  { name = "Raj Shah" }
]
description = "Free, local MCP server for context window visibility across all major AI models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "llm", "tokens", "context-window", "ai", "cursor", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
openai = ["tiktoken>=0.7.0"]
anthropic = ["anthropic>=0.40.0"]
google = ["google-generativeai>=0.8.0"]
local = ["transformers>=4.40.0", "torch"]
all = [
    "tiktoken>=0.7.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "transformers>=4.40.0",
]

[project.scripts]
tokenwise = "tokenwise.server:run"

[project.urls]
Homepage = "https://github.com/iamshahraj/tokenwise"
Repository = "https://github.com/iamshahraj/tokenwise"
Issues = "https://github.com/iamshahraj/tokenwise/issues"

[tool.hatch.build.targets.wheel]
packages = ["tokenwise"]
